[gd_scene load_steps=4 format=3 uid="uid://dxrlycp27hmfj"]

[ext_resource type="Script" uid="uid://d2hbyorw05kqv" path="res://Scripts/ammo_count.gd" id="1_o6slu"]
[ext_resource type="Texture2D" uid="uid://da7jx2vwaeisd" path="res://Assets/Revolver_Chamber.png" id="2_ngl8a"]
[ext_resource type="Texture2D" uid="uid://bxe202d5ncs1p" path="res://Assets/bullet_back.png" id="3_khfvt"]

[node name="AmmoCount" type="Control"]
z_index = 1
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_o6slu")

[node name="Barrel" type="Sprite2D" parent="."]
position = Vector2(1759, 929)
scale = Vector2(3.6, 3.6)
texture = ExtResource("2_ngl8a")

[node name="Chamber1" type="Sprite2D" parent="Barrel"]
position = Vector2(-3.39084e-05, -20.5556)
texture = ExtResource("3_khfvt")
metadata/_edit_lock_ = true

[node name="Chamber2" type="Sprite2D" parent="Barrel"]
position = Vector2(17.7777, -10.8334)
texture = ExtResource("3_khfvt")
metadata/_edit_lock_ = true

[node name="Chamber3" type="Sprite2D" parent="Barrel"]
position = Vector2(18.0555, 10.8333)
texture = ExtResource("3_khfvt")
metadata/_edit_lock_ = true

[node name="Chamber4" type="Sprite2D" parent="Barrel"]
position = Vector2(-3.39084e-05, 20.2778)
texture = ExtResource("3_khfvt")
metadata/_edit_lock_ = true

[node name="Chamber5" type="Sprite2D" parent="Barrel"]
position = Vector2(-18.0556, 10.8333)
texture = ExtResource("3_khfvt")
metadata/_edit_lock_ = true

[node name="Chamber6" type="Sprite2D" parent="Barrel"]
position = Vector2(-18.0556, -10.2778)
texture = ExtResource("3_khfvt")
metadata/_edit_lock_ = true
